--- a/package.json
+++ b/package.json
@@ -8,13 +8,18 @@
     "@testing-library/user-event": "^7.2.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.3"
+    "react-icons": "^3.11.0",
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "3.4.3",
+    "styled-components": "^5.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "singlePath": "rc-autocomplete --src 'node_modules/react-toolbox/components/**/*.js'",
+    "generate": "rc-autocomplete"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -30,5 +35,18 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "react-autocomplete-cli": "0.0.3"
+  },
+  "html": {
+    "tag_case": "lower",
+    "attr_quotes": "single",
+    "self_closing_tag": true
+  },
+  "jsx": {
+    "tag_case": "lower",
+    "attr_quotes": "single",
+    "self_closing_tag": true
   }
 }
